# decasu

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  rubin-science-pipelines.yml
decasu/: __init__.py  configuration.py  decasu_globals.py  decasu_hpix_mapper.py  decasu_tile_mapper.py  healpix_consolidator.py  healpix_mapper.py  lsst_wcs_consdb.py  lsst_wcs_db.py  multi_healpix_mapper.py  multi_mapper.py  multi_tile_mapper.py  region_mapper.py  simple_healpix_mapper.py  simple_mapper.py  utils.py  wcs_table.py
scripts/: decasu_hpix_mapper.py  decasu_mapper.py  decasu_tile_mapper.py
tests/: decasu_test_base.py  test_hpix_hsc.py  test_hpix_lsst.py  test_tilename.py
tests/configs/: config_hpix_hsc.yaml  config_hpix_lsst.yaml  config_tilename.yaml
tests/data/: baseline_v2.0_10yrs_test_data.db  y3a2_i_mangle_4096_airmass.hs  y3a2_i_mangle_4096_exptime.hs  y3a2_i_mangle_4096_frac.hsp  y3a2_i_mangle_4096_fwhm.hs  y3a2_i_mangle_4096_maglim.hsp  y3a2_i_mangle_4096_skybrite.hs  y3a2_i_mangle_4096_skyvar.hsp
ups/: decasu.table
